<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.sats17</groupId>
	<artifactId>java-assignments</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>java-assignments</name>
	<packaging>pom</packaging>
	<modules>
		<module>streams-assignments</module>
		<module>lambda-assignments</module>
		<module>inheritance-assignments</module>
		<module>collections-assignments</module>
		<module>problems-assignments</module>
		<module>reactivestreams-assignments</module>
		<module>webflux-assignments</module>
		<module>basic-assignments</module>
		<module>thread-assignments</module>
	</modules>
	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<!-- Plugins version -->
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
